--- a/upload-artifact/action.yml
+++ b/upload-artifact/action.yml
@@ -34,6 +34,7 @@ runs:
         DST_EXPIRY=$(date -d "+${{ inputs.retention-days }} days" +%Y-%m-%d)
         DST_FOLDER=/temp-artifacts/will-be-deleted-on-${DST_EXPIRY}/$(echo $GITHUB_REPOSITORY|sed 's#/#_#g')_${GITHUB_RUN_ID}
         echo "Will be uploading artifact to: ${DST_FOLDER}"
-        echo "::set-env name=RSYNC_FOLDER::$DST_FOLDER"
+        # echo "::set-env name=RSYNC_FOLDER::$DST_FOLDER"
         echo "::notice file=README.md,title=Artifacts location::Artifacts are available at: $DST_FOLDER"
+        echo "RSYNC_FOLDER=${DST_FOLDER}" >> $GITHUB_ENV
 
