--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -1,6 +1,8 @@
 name: Integration tests
 description: Runs Jahia integration tests on an Ubuntu server
 
+# To review: https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions
+
 inputs:
   module_id:
     description: 'Module ID'
@@ -175,7 +177,7 @@ inputs:
   artifact_retention:
     description: 'Time during which artifact are kept in Github infrastructure'
     required: false
-    default: 2   
+    default: '2'
 
 runs:
   using: "composite"
@@ -187,7 +189,9 @@ runs:
     - name: Install @jahia/jahia-reporter
       shell: bash
       run: | 
+        echo "::group::Install @jahia/jahia-reporter"
         npm install -g @jahia/jahia-reporter
+        echo "::endgroup::"
 
     # Download the artifacts that were saved at build time.
     - name: Download a single artifact
@@ -196,20 +200,12 @@ runs:
       with:
         name: build-artifacts
 
-    - name: List current directory [TO BE REMOVED]
-      shell: bash
-      run: | 
-        ls -lah
-        echo "---"
-        if [ -d target/ ]; then
-          ls -lah target/
-        fi
-
     # Set the environment variables necessary for the docker-compose run
     # These are declared here to avoid having to repeat in multiple steps
     - name: Set environment variables from parameters
       shell: bash
       run: |
+        echo "::group::Set environment variables from parameters"
         echo "MANIFEST=${{ inputs.tests_manifest }}" >> $GITHUB_ENV
         echo "JAHIA_IMAGE=${{ inputs.jahia_image }}" >> $GITHUB_ENV
         echo "JAHIA_LICENSE=${{ inputs.jahia_license }}" >> $GITHUB_ENV
@@ -220,6 +216,7 @@ runs:
         echo "NEXUS_USERNAME=${{ inputs.nexus_username }}" >> $GITHUB_ENV
         echo "NEXUS_PASSWORD=${{ inputs.nexus_password }}" >> $GITHUB_ENV
         echo "CURRENT_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
+        echo "::endgroup::"
 
     - name: Display important versions and environment variables
       shell: bash
@@ -238,16 +235,22 @@ runs:
     - name: Prepare export folder
       shell: bash
       run: |
+        echo "::group::Prepare export folder"
         mkdir -p ${{ inputs.tests_path }}artifacts
+        echo "::endgroup::"
   
     # Login to the docker registry is needed to access some images (snapshots, ...)
     - name: Docker login
       shell: bash
-      run: echo "${{ inputs.docker_password }}" | docker login -u "${{ inputs.docker_username }}" --password-stdin
+      run: | 
+        echo "::group::Docker login"
+        echo "${{ inputs.docker_password }}" | docker login -u "${{ inputs.docker_username }}" --password-stdin
+        echo "::endgroup::"
 
     - name: Preparing build artifacts
       shell: bash
       run: |
+        echo "::group::Preparing build artifacts"
         if [ ${{ inputs.should_skip_artifacts }} == false ]; then
           find . -type f -path '*/target/*-SNAPSHOT.jar' -exec cp '{}' ${{ inputs.tests_path }}artifacts/ ';' || :
           if [ -d ./build-dependencies/ ]; then
@@ -257,7 +260,8 @@ runs:
             ls -lah ${{ inputs.tests_path }}artifacts/build-dependencies/
           fi
           ls -lah ${{ inputs.tests_path }}artifacts
-        fi   
+        fi
+        echo "::endgroup::"
 
     # We always build the test container from scratch
     # Docker layer caching makes this quick if it was already previously built
@@ -265,6 +269,7 @@ runs:
     - name: Build the tests image
       shell: bash
       run: |
+        echo "::group::Build the tests image"
         if [ ${{ inputs.should_build_testsimage }} == true ]; then
           cd ${{ inputs.tests_path }}
           if [[ "${{ inputs.tests_container_branch }}" != "" ]]; then
@@ -272,12 +277,14 @@ runs:
           fi
           docker build -t ${{ inputs.tests_image }} .
           docker save -o tests_image.tar ${{ inputs.tests_image }}
-        fi    
+        fi
+        echo "::endgroup::"
 
     # Pull the latest version of ${JAHIA_IMAGE} and ${JCUSTOMER_IMAGE}
     - name: Pull the latest version of Jahia and jCustomer and print docker images cache to console
       shell: bash
       run: |
+        echo "::group::Pull the latest version of Jahia and jCustomer and print docker images cache to console"
         cd ${{ inputs.tests_path }}
         . ./set-env.sh
         echo "List of docker images in local cache PRIOR pull" > ./artifacts/docker.log
@@ -292,21 +299,14 @@ runs:
         echo "List of docker images in local cache AFTER pull" >> ./artifacts/docker.log
         docker images --digests --all 2>&1 | tee -a ./artifacts/docker.log
         echo "--------------------------------------------------" >> ./artifacts/docker.log  
-
-    # Run a background task to display the running containers and their hash
-    # This is used to verify that the right containers are running
-    # Sleep 30s to give containers time to start
-    # - run: |
-    #     cd ${{ inputs.tests_path >>
-    #     sleep 30
-    #     docker ps --all --no-trunc 2>&1 | tee -a ./artifacts/docker.log
-    #   shell: bash 
+        echo "::endgroup::"
 
     # Using abort-on-container-exit will exit on first container failure, which
     # for us will be the test container
     - name: Spin-up the containers
       shell: bash  
       run: |
+        echo "::group::Spin-up the containers"
         cd ${{ inputs.tests_path }}
         export DOCKER_CLIENT_TIMEOUT=120
         export COMPOSE_HTTP_TIMEOUT=120
@@ -317,13 +317,16 @@ runs:
         else
           docker-compose -f ${{ inputs.docker_compose_file }} up --abort-on-container-exit
         fi
+        echo "::endgroup::"
 
     - name: Export containers artifacts (reports, secreenshots, videos)
       shell: bash
       if: always()
       run: |
+        echo "::group::Export containers artifacts (reports, secreenshots, videos)"
         cd ${{ inputs.tests_path }}
         docker cp ${{ inputs.tests_container_name }}:/home/jahians/results ./artifacts
+        echo "::endgroup::"
 
     # Running logs with -t adds a timestamp, this might feel redundant with the timestamp provided
     # by directly jahia but this allows for easy comparison between various containers that might
@@ -332,6 +335,7 @@ runs:
       shell: bash
       if: always()
       run: |
+        echo "::group::Export containers logs"
         cd ${{ inputs.tests_path }}
         . ./set-env.sh
         docker stats --all --no-stream > ./artifacts/results/docker-stats.log
@@ -340,16 +344,19 @@ runs:
         docker logs jahia > ./artifacts/results/jahia.log
         docker logs ${{ inputs.tests_container_name }} > ./artifacts/results/${{ inputs.tests_container_name }}.log
         cp ./artifacts/docker.log ./artifacts/results/
+        echo "::endgroup::"
 
     - name: Analyze Test results
       shell: bash
       if: always()
       run: |
+        echo "::group::Analyze Test results"
         cd ${{ inputs.tests_path }}
         if [[ ! -e ./artifacts/results/test_success ]]; then
           echo "More than one failure found, sending exit signal"
           exit 1
         fi
+        echo "::endgroup::"
 
     # If a ci.postrun.sh script is present, this script is executed
     # The main purpose of this script is to export additional artifacts,
@@ -358,6 +365,7 @@ runs:
       shell: bash
       if: always()
       run: |
+        echo "::group::Execute Postrun script is present"
         cd ${{ inputs.tests_path }}
         export DOCKER_CLIENT_TIMEOUT=120
         export COMPOSE_HTTP_TIMEOUT=120
@@ -366,6 +374,7 @@ runs:
           echo "Postrun script is present"
           bash ${{ inputs.ci_postrun_script }}
         fi
+        echo "::endgroup::"
 
     # Once all is executed, results are submitted to external platforms
     # Testrail report and Slack (failure only) notifications are sent during scheduled executions or merged into the main branch 
@@ -373,6 +382,7 @@ runs:
       shell: bash
       if: always()
       run: |
+        echo "::group::Publish results to testrail"
         if [ ${{ inputs.should_skip_testrail }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter testrail \
@@ -384,12 +394,14 @@ runs:
             --milestone="${{ inputs.testrail_milestone }}" \
             --defaultRunDescription="This test was executed on Github Actions, $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"
         fi
+        echo "::endgroup::"
 
     # See https://theoephraim.github.io/node-google-spreadsheet/#/getting-started/authentication for Google Auth setup
     - name: Create incident in PagerDuty
       shell: bash 
       if: failure()
       run: |
+        echo "::group::Create incident in PagerDuty"
         echo "Current branch is: $CURRENT_BRANCH"
         if [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ] || [ master == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
@@ -407,11 +419,13 @@ runs:
             --service="${{ inputs.module_id }}" \
             --sourceUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
         fi  
+        echo "::endgroup::"
 
     - name: Send Notifications to Slack
       shell: bash 
       if: always()
       run: |
+        echo "::group::Send Notifications to Slack"
         if [ ${{ inputs.should_skip_notifications }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter slack \
@@ -425,11 +439,13 @@ runs:
             --msgAuthor="Github Actions ($GITHUB_REPOSITORY)" \
             --runUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
         fi 
+        echo "::endgroup::"
 
     - name: Send Test data to https://zencrepes.jahia.com
       shell: bash
       if: always()
       run: |
+        echo "::group::Send Test data to https://zencrepes.jahia.com"
         if [ ${{ inputs.should_skip_zencrepes }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter zencrepes \
@@ -441,6 +457,7 @@ runs:
             --name="${{ inputs.module_id }}" \
             --runUrl=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
         fi
+        echo "::endgroup::"
 
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v2
@@ -456,17 +473,20 @@ runs:
         path: ${{ inputs.tests_path }}artifacts/results/
         retention-days: ${{ inputs.artifact_retention }}
 
-    - name: Keep session opened if a particular file is present
+    - name: Keep session opened if /tmp/debug file is present
       shell: bash
       if: always()
       run: |
-          WAIT_DURATION=0
-          while [[ -e /tmp/debug ]]; do
-            echo "Debug file present - $(( ++ WAIT_DURATION ))s - waiting for file removal..."
-            if [ $WAIT_DURATION -gt ${{ inputs.debug_session_timeout }} ]; then
-              echo "Reached timeout of: ${{ inputs.debug_session_timeout }}"
-              echo "Exiting the loop"
-              break
-            fi
-            sleep 1;
-          done
+        echo "::group::Keep session opened if /tmp/debug file is present"
+        WAIT_DURATION=0
+        while [[ -e /tmp/debug ]]; do
+          echo "Debug file present - $(( ++ WAIT_DURATION ))s - waiting for file removal..."
+          if [ $WAIT_DURATION -gt ${{ inputs.debug_session_timeout }} ]; then
+            echo "Reached timeout of: ${{ inputs.debug_session_timeout }}"
+            echo "Exiting the loop"
+            break
+          fi
+          sleep 1;
+        done
+        echo "::endgroup::"
+
