--- a/sonar-analysis/action.yml
+++ b/sonar-analysis/action.yml
@@ -27,6 +27,10 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifacts
 
     - name: Generate Cache Key Seeds
       shell: bash
