--- a/sonar-analysis/action.yml
+++ b/sonar-analysis/action.yml
@@ -23,10 +23,19 @@ inputs:
     description: Filepath to the settings.xml file
     required: false
     default: '.circleci/.circleci.settings.xml'
+  build_artifacts:
+    description: "Name of the artifact target folder that was saved from build stage (using upload-artifact)"
+    required: false
+    default: 'build-artifacts'
 
 runs:
   using: "composite"
   steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v2
+      if: ${{ inputs.build_artifacts != '' }}
+      with:
+        name: ${{ inputs.build_artifacts }}
 
     - name: Generate Cache Key Seeds
       shell: bash
