--- a/release/action.yml
+++ b/release/action.yml
@@ -73,7 +73,7 @@ runs:
         git config user.email ${{ inputs.git_user_email }}
         git config user.name ${{ inputs.git_user_name }}
         git tag --delete ${{ inputs.release_version }}
-        git push --delete origin ${{ inputs.release_version }}
+        git push origin :refs/tags/${{ inputs.release_version }}
 
     - name: Remove any previous changes, this is required by mvn release prepare
       shell: bash
