--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -252,9 +252,10 @@ runs:
   
     # Login to the docker registry is needed to access some images (snapshots, ...)
     - name: Docker login
-      shell: bash
-      run: | 
-        echo "${{ inputs.docker_password }}" | docker login -u "${{ inputs.docker_username }}" --password-stdin
+      uses: docker/login-action@v1
+      with:
+        username: ${{ inputs.docker_username }}
+        password: ${{ inputs.docker_password }}
 
     - name: Preparing build artifacts
       shell: bash
